Fix bookmark title overflow handling

--- a/Bookmarks Page/_bookmarksPage.scss
+++ b/Bookmarks Page/_bookmarksPage.scss
@@ -99,10 +99,19 @@ div.link {
     align-content: center;
     text-decoration: none;
     text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    box-sizing: border-box;
+    padding: 1em;
 }
 
 div.link:hover {
     cursor: pointer;
+}
+
+span.linkTitle {
+    margin: 1em;
 }
 
 a {
